--- a/css/fonts.css
+++ b/css/fonts.css
@@ -8,12 +8,12 @@
 	src: url('../fonts/FreightBigPro-Book.otf') format('opentype');
 }
 
-/*@font-face {
-	font-family: 'FreightBigPro-Medium';
+@font-face {
+	font-family: 'FreightBigPro-Light';
 	font-weight: normal;
 	font-style: normal;
-	src: url('../fonts/FreightBigPro-Medium.otf') format('opentype');
-}*/
+	src: url('../fonts/FreightBigPro-Light.otf') format('opentype');
+}
 
 @font-face {
 	font-family: 'SuisseIntl-Regular';
