Added location details to about us page

--- a/css/grids.css
+++ b/css/grids.css
@@ -11,7 +11,7 @@
 	text-align: center;
 }
 
-.grid {
+.grid, section.location {
 	display: -webkit-flex; 			/* Supports older browsers */
 	display: -ms-flex; 				/* Supports Internet 10 */
 	display: flex;
@@ -114,7 +114,7 @@ form .col-1of2 {
 	flex: 1 1 40%;
 }
 
-.grid-item#title{ 
+/*.grid-item#title{ 
 	height: 50px;
 	flex: 3 1 100%;
 }
@@ -139,7 +139,7 @@ form .col-1of2 {
 	margin-bottom: 1rem;
 	margin-right:0.7rem;
 }
-
+*/
 /*.grid-item.button { 
 	height: 50px;
 	flex: 1 1 3%;
@@ -239,35 +239,6 @@ form .col-1of2 {
 
 
 /* ---------- Media Queries ---------- */
-/* ----------  Phone and below  ---------- */
-/*@media screen and (max-width: 37em) {
-	.hero .hero-text {
-		margin: 0;
-		padding-top: 3.5rem;
-   		padding-left: 3.5rem;
-   		padding: 3.5rem;
-	}
-*/
-	/*----- Nav Bar ------*/
-/*	nav .search-bar input {
-    	font-size: 0.9rem;
-	}
-
-	nav .col-1of6 a {
-    	font-size: 1rem;
-	}*/
-
-	/*----- About ------*/
-/*	.about-desc {
-  	 	 padding: 0rem 2rem 0rem 2rem;
-	}
-
-	.about > .hero > .text > h1 {
-		font-size: 1.7rem;
-		text-align: center;
-	}
-}
-*/
 /* ----------  Phone and below  ---------- */
 @media screen and (max-width: 37em) {
 
@@ -545,10 +516,17 @@ form .col-1of2 {
 		padding-top: 5rem;
 	}
 
+	/*----- About - Location ------*/
+	.alternating-content-img.col-1of2{
+		flex: 2 1 100% !important;
+	}
+
+	.alternating-content-text.col-2of2{
+		flex: 1 1 100% !important;
+		text-align: center !important;
+	}
+
 }
-
-
-
 
 /* ----------  Tablet and below  ---------- */
 @media (max-width: 48em) {
@@ -650,7 +628,15 @@ form .col-1of2 {
 		max-width: 40rem;
 	}
 
+	/*----- About - Location ------*/
+	.alternating-content-img.col-1of2{
+		flex: 1 1 40%;
+	}
 
+	.alternating-content-text.col-2of2{
+		flex: 1 1 30%;
+		text-align: left;
+	}
 }
 
 
