--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,10 @@ section.intext a:hover, section.intext a:focus, section.intext a:active {
 	transition: color 0.5s;
 }
 
+.contact a {
+	color: #474747;
+}
+
 /* ------ Paragraph Styling ------*/
 p {
 	max-width: 38rem;
@@ -65,7 +69,7 @@ p.about-desc {
 }
 
 /* ------ Header Styling ------*/
-h1 {
+h1, h1.web {
   font-family: "FreightBigPro-Light";
   font-weight: 100;
   font-size: 3.4rem;
@@ -76,6 +80,7 @@ h1 {
   max-width: 35rem;
   letter-spacing: 0.10rem;
 }
+
 
 .shop h1, .shop p {
 	margin: auto;
@@ -93,7 +98,7 @@ h2  {
 	font-size: 1.5rem;
 }
 
-h3, .styleguide h1 {
+h3, h1.styleguide {
 	font-family: "SuisseIntl-Normal", Verdana, sans-serif;
 	font-weight: 400;
 	font-size: .9rem;
@@ -103,7 +108,7 @@ h3, .styleguide h1 {
 	text-align: left;
 }
 
-.styleguide h1 {
+h1.styleguide {
 	color: #339F95;
 }
 
@@ -460,7 +465,7 @@ nav .search-bar {
 
 /* ------ About Us -------- */
 .values img {
-	width: 25%;
+	width: 20%;
 	height: auto;
 }
 
@@ -469,12 +474,17 @@ nav .search-bar {
 }
 
 .values.col-2of3 img {
-	width: 20%;
+	width: 15%;
 	height: auto;
 }
 
 .values.col-1of3 img {
 	padding-bottom: 1rem;
+}
+
+
+section.location .alternating-content-img img {
+	box-shadow: 1px 2px 10px #eee;
 }
 
 
